# resume-boost

./: .gitignore  README.md  analyzer.py  app.py  config.py  diff_highlight.py  jd_store.py  jds.json  main.py  pdf_generator.py  pdf_parser.py  pyproject.toml  resume_examples.json  rewriter.py
