[project]
name = "resume-boost"
version = "0.1.0"
description = "AI-powered resume optimization system based on RAG (Retrieval-Augmented Generation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fpdf2>=2.8.7",
    "gradio>=6.17.3",
    "jieba>=0.42.1",
    "markdown>=3.10.2",
    "openai>=2.41.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]


